Fix: Success icon after `conflict-marker` is too low (#5006)

--- a/source/features/conflict-marker.css
+++ b/source/features/conflict-marker.css
@@ -1,4 +1,3 @@
 .rgh-conflict-marker svg {
-	vertical-align: middle;
 	color: var(--color-icon-tertiary, #ccc);
 }
